# algorithms-c

./: .gitignore  CMakeLists.txt  README.md
src/: test.cpp
src/fun/: LargestLongPrimes.cpp
src/fun/primes/: SieveOfEratosthenes.cpp
src/hackerrank/algorithms/bit-manipulation/easy/: Flippingbits.cpp  LonelyInteger.cpp  MaximizingXOR.cpp  SumvsXOR.cpp
src/hackerrank/algorithms/debugging/easy/: SmartNumbers.cpp
src/hackerrank/algorithms/greedy/easy/: BeautifulPairs.cpp  GridChallenge.cpp  JimandtheOrders.cpp  LargestPermutation.cpp  LuckBalance.cpp  MarcsCakewalk.cpp  MarkandToys.cpp  MaximumPerimeterTriangle.cpp  MinimumAbsoluteDifferenceinanArray.cpp  PermutingTwoArrays.cpp  PriyankaandToys.cpp  (+1 more)
src/include/: commonutils.h  timeit.h
src/leetcode/: 1033-MovingStonesUntilConsecutive.cpp  1137-NthTribonacciNumber.cpp  121-BestTimeToBuyAndSellStock.cpp  343-IntegerBreak.cpp
src/leetcode/april-2021/: BrickWall.cpp
src/leetcode/linkedin/: 1-TwoSum.cpp  104-MaximumDepthofBinaryTree.cpp  13-RomanToInteger.cpp  20-ValidParentheses.cpp  243-ShortestWordDistance.cpp  5-LongestPalindromicString.cpp  706-DesignHashMap.cpp  8-StringToInteger.cpp
src/project-euler/: ProjectEuler-1.cpp  ProjectEuler-10.cpp  ProjectEuler-11.cpp  ProjectEuler-12.cpp  ProjectEuler-13.cpp  ProjectEuler-14.cpp  ProjectEuler-15.cpp  ProjectEuler-2.cpp  ProjectEuler-3.cpp  ProjectEuler-4.cpp  ProjectEuler-5.cpp  ProjectEuler-6.cpp  ProjectEuler-7.cpp  ProjectEuler-8.cpp  ProjectEuler-9.cpp
src/sorting/: quicksort.c
src/xtensor/: expressionsAndLazyEvaluation.cpp  xtensorBasics.cpp
(+62 files in other folders)
